# craft-bevy

./: Cargo.toml
.cargo/: config
src/: components.rs  events.rs  lib.rs  main.rs  models.rs  render.rs  resources.rs  systems.rs  utilities.rs
src/components/: awaiting_spawn.rs  component_registry.rs  local_player.rs  player.rs  rigid_body.rs  server_entity.rs  synchronizable.rs  synchronized.rs  world.rs
src/events/: command_frame.rs  entity_spawn.rs  state_frame.rs
src/models/: command_buffer.rs  command_frame.rs  command_frame_buffer.rs  connection_info.rs  entity_spawn.rs  input_command.rs  input_command_buffer.rs  input_frame.rs  net_client.rs  net_message.rs  state_frame.rs  state_frame_buffer.rs  synchronizable.rs  synchronized_input.rs  synchronized_state.rs
src/render/: entity.rs  graph.rs  material.rs  octree.rs  plugin.rs  voxel.rs  voxel_volume.rs
src/render/graph/: nodes.rs  pipeline.rs  quad copy.fs  quad.fs  quad.vs  test.fs  (+5 more)
src/resources/: clients.rs  net_event_state.rs  network_event_listener_state.rs  player_focus.rs  simulation_time.rs  window_resize_event_listener_state.rs  world_data.rs  world_generator.rs
src/systems/: chunk_loading_system.rs  client_authoratative_state_consumption.rs  client_entity_spawning.rs  client_prediction.rs  command_accumulator.rs  gameplay.rs  local_player_camera.rs  local_player_movement.rs  network_message_listener.rs  player_movement.rs  server_entity_spawning.rs  server_player_movement.rs  server_state_authoring.rs  server_state_preauthoring.rs  window_resolution.rs
src/utilities/: euler.rs  gradient.rs
(+12 files in other folders)
