[package]
name = "craft"
version = "0.1.0"
authors = ["lwansbrough <lochie@live.com>"]
edition = "2018"

[lib]
name = "craft"

[[bin]]
name = "server"

[[bin]]
name = "client"

[dependencies]
bevy = "0.1.3"
bincode = "1.3.1"
serde = "1.0.*"
log = "0.4.8"
bevy_rapier3d = { version = "0.1.1", features = ["simd-stable", "parallel", "serde-serialize"] }
bevy_prototype_networking_laminar = { git = "https://github.com/ncallaway/bevy_prototype_networking_laminar.git" }
