[package]
name = "craft"
version = "0.1.0"
authors = ["lwansbrough <lochie@live.com>"]
edition = "2018"

[lib]
name = "craft"

[[bin]]
name = "server"

[[bin]]
name = "client"

[patch.crates-io]
isosurface = { path = '../../isosurface' }
# bevy = { path = "../../bevy" }

[dependencies]
bevy = "0.5.0"
bincode = "1.3.1"
serde = "1.0.*"
log = "0.4.8"
bevy_rapier3d = { version = "0.7.0", features = ["simd-stable", "parallel", "serde-serialize"] }
# bevy_prototype_networking_laminar = { path = "../../bevy_prototype_networking_laminar" }
noise = "0.6.0"
bevy_fly_camera = "0.7.0"
isosurface = "0.0.4"
# bit-svo = { git = "https://github.com/bfops/bit-svo.git" }